<resources>
    <string name="app_name">Sondagem</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_principal">Sondagem OCR</string>
    <string name="item_sondagens">Sondagens</string>
    <string name="item_turmas">Turmas</string>
    <string name="item_alunos">Alunos</string>
    <string name="item_relatorio">Relatórios</string>
    <string name="item_sair">Sair</string>
    <string name="title_activity_menu_sondagem"></string>
    <string name="title_activity_cadastro_sondagem">Cadastro de Sondagem</string>
    <string name="palavra_poli">Palavra Polissílaba</string>
    <string name="palavra_tri">Palavra Trissílaba</string>
    <string name="palavra_dissi">Palavra Dissílaba</string>
    <string name="palavra_mono">Palavra Monossílaba</string>
    <string name="palavra_frase">Frase</string>
    <string name="gravar">Gravar</string>
    <string name="limpar">Limpar</string>
    <string name="title_activity_cadastro_usuario">Cadastro de Usuário</string>
    <string name="cadastro_usuario">Cadastro de Usuário</string>
    <string name="cadastro_login">Cadastro de Login</string>
    <string name="cadastro_turma">Cadastro de Turma</string>
    <string name="cadastro_aluno">Cadastro de Aluno</string>
    <string name="dados_responsável">Dados do Responsável</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="cancelar">Cancelar</string>
    <string name="title_activity_cadastro_turma">Cadastro de Turma</string>
    <string name="title_activity_cadastro_aluno">Cadastro de Aluno</string>
    <string name="title_activity_cadastro_sondagem_mod">CadastroSondagemModActivity</string>
    <string name="numero">Número </string>
    <string name="insiraPalavras">Insira as palavras: </string>
    <string name="insiraFrase">Insira a frase: </string>
    <string name="title_activity_ajuda_sondagem">AjudaSondagemActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string-array name="titles_tab">
        <item>SONDAGENS</item>
        <item>MODELO</item>
    </string-array>

    <string-array name="titles_tab_cadastro_sondagem">
        <item>IDENTIFICAÇÃO</item>
        <item>POLISSÍLABA</item>
        <item>TRISSÍLABA</item>
        <item>DISSÍLABA</item>
        <item>MONOSSÍLABA</item>
        <item>FRASE</item>
        <item>RESULTADO</item>
    </string-array>

    <string name="text_fragment_a">Sondagens</string>
    <string name="text_fragment_b">Modelo</string>
    <string name="title_activity_consulta_sondagem_simples">ConsultaSondagemSimples</string>
    <string name="title_activity_view_sondagem_modelo">ViewSondagemModeloActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_consulta_sondagem_mod_simples">ConsultaSondagemModSimplesActivity
    </string>
</resources>
