<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.project.sondagemocr.CadastroTurmaActivity"
    tools:showIn="@layout/activity_cadastro_turma"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/cadastro_turma"
        android:textSize="25dp"
        android:id="@+id/textView4"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"/>

    <EditText
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:id="@+id/edtIdentTurma"
        android:hint="Turma"
        android:layout_marginTop="12dp"/>

    <EditText
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/edtAnoTurma"
        android:hint="Ano"
        android:layout_marginTop="12dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="200dp">

        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/cancelar"
            android:id="@+id/btCancelaTurma"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="7dp"/>

        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/cadastrar"
            android:id="@+id/btCadastraTurma"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="7dp"/>
    </LinearLayout>

</LinearLayout>
