<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.project.sondagemocr.CadastroUsuarioActivity"
    tools:showIn="@layout/activity_cadastro_usuario">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/cadastro_usuario"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:textSize="25dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:hint="Nome"
        android:id="@+id/edtNomeUsuario"
        android:layout_marginTop="18dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="RG"
        android:id="@+id/edtRgUsuario"
        android:inputType="number"
        android:layout_marginTop="18dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="CPF"
        android:inputType="number"
        android:id="@+id/edtCpfUsuario"
        android:layout_marginTop="18dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/edtNascUsuario"
            android:hint="Data de Nascimento"
            android:layout_weight="0.5"
            android:layout_marginTop="18dp"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerEscolaridade"
            android:layout_weight="3" />


    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Coordenador"
        android:id="@+id/edtCoord"
        android:layout_marginTop="18dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/cadastro_login"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:textSize="25dp"
        android:layout_marginTop="30dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/edtLoginUsuario"
        android:hint="E-mail"
        android:layout_marginTop="18dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/edtSenhaUsuario"
        android:layout_marginTop="18dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp">

        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:id="@+id/btCancelarUsuario"
            android:text="@string/cancelar"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="7dp"/>

        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:id="@+id/btCadastraUsuario"
            android:text="@string/cadastrar"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="7dp"/>
    </LinearLayout>

</LinearLayout>
